--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "shelljs": "^0.7.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-router": "^2.1.1",
